--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "request": "^2.87.0"
+    "mysql": "^2.16.0",
+    "request": "^2.87.0",
+    "uuid": "^3.3.2"
   }
 }
